@@ -3142,6 +3142,10 @@ class cmd_annotate(Command):
             else:
                 revision_id = revision[0].in_history(branch).rev_id
             file_id = tree.path2id(relpath)
+            if file_id is None:
+              raise errors.BzrCommandError("The file '%s' is not present "
+                                           "in the "
+                                           "specified revision" % relpath)
             tree = branch.repository.revision_tree(revision_id)
             file_version = tree.inventory[file_id].revision
             annotate_file(branch, file_version, file_id, long, all, sys.stdout,
